# angelic_actix

./: .env  .gitignore  Cargo.toml
migrations/2019-10-19-102646_create_posts/: up.sql
migrations/2019-10-25-160413_create_posts/: up.sql
migrations/2019-11-25-101712_create_users_table/: up.sql
migrations/2019-11-28-220506_create_comments/: up.sql
migrations/2019-12-25-160713_create_posts/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  post_controller.rs  user_controller.rs
src/database/: mod.rs
src/models/: mod.rs  post.rs
src/responders/: mod.rs  post_responders.rs  user_responders.rs
src/routes/: posts.rs  users.rs
