[package]
name = "angelic_actix"
version = "0.1.0"
authors = ["Justin Parado <justin.parado@dice205.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"
actix = "0.8.3"
diesel = { version = "1.4.3", features = [ "mysql", "postgres"] }
dotenv = "0.14.1"
serde = "1.0.101"
colored = "1.8.0"
futures = "0.1.29"
r2d2 = "0.8.6"
r2d2_mysql = "*"
r2d2_postgres = "*"
uuid = "0.8.1"
actix-session = "0.2.0"
postgres = "0.15.2"
